Fix topbar z-index

--- a/src/assets/sass/main/layout.scss
+++ b/src/assets/sass/main/layout.scss
@@ -6,6 +6,7 @@
 .topbar {
 	border-bottom: 1px solid $color-black;
     position: fixed;
+    z-index: 10000;
     top: 0;
 	left: 0;
     width: 100%;
